2013-04-16 Miguel de Dios <miguel.dedios@artica.es>

	* godmode/groups/group_list.php: fixed notice PHP.

2013-04-16  Sergio Martin <sergio.martin@artica.es>

	* include/db/mysql.php: Fix a bug with the dbresource in the 
	function that count the result of a query.

2013-04-16 Miguel de Dios <miguel.dedios@artica.es>

	* godmode/agentes/module_manager_editor_network.php,
	godmode/agentes/module_manager_editor_common.php,
	include/javascript/pandora_modules.js: fixed the hidden fields for
	tcp checks.
	
	Fixes: #3611054
	
	* godmode/setup/setup_visuals.php: improved the source code style.

2013-04-16  Mario Pulido <mario.pulido@artica.es>

	* godmode/agentes/configurar_agente.php: Fixed helps view in Agent config

	*include/help/es/help_alert-matches.php,
        include/help/en/help_alert-matches.php: Modified alert help (Scaling alerts)

2013-04-16  Sergio Martin <sergio.martin@artica.es>

	* include/styles/pandora.css
	images/blade.png: Aesthetic changes
		
	* include/ajax/events.php
	include/functions_ui.php
	include/javascript/pandora_events.js
	operation/events/events.build_table.php
	operation/events/events.php
	include/functions_config.php: Add the readonly
	mode to events list when the new option is 
	enabled on setup

2013-04-16 Miguel de Dios <miguel.dedios@artica.es>

	* godmode/setup/setup.php: updated the method to fill the header
	with the new header.

2013-04-16  Sergio Martin <sergio.martin@artica.es>

	* include/functions_ui.php
	images/information_big.png
	images/help2.png
	images/info.png
	images/information.png: Add new information icon for
	ui messages

2013-04-16  Sergio Martin <sergio.martin@artica.es>

	* operation/agentes/ver_agente.php
	godmode/agentes/configurar_agente.php: Fixed double truncate
	in header. Now the truncate is encapsulated into header
	function

2013-04-15  Sergio Martin <sergio.martin@artica.es>

	* general/header.php: Adding id to the header table
	to avoid jquery malfunctions in other places
